# python-engineering-lab

./: .gitignore  .pre-commit-config.yaml  README.md  find_json_files.py  index.html  pyproject.toml  requirements-dev.txt
event_stream_risk_detector/: .coverage  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
event_stream_risk_detector/src/event_stream_risk_detector/: __init__.py  config.py  consumer.py  logger.py  logging_config.py  producer.py  risk_evaluator.py  rules.py  schema.py
event_stream_risk_detector/tests/: test_config.py  test_customer_bdd.py  test_logger.py  test_risk_evaluator.py  test_rules.py
event_stream_risk_detector/tests/features/: risk.feature
fix-protocol-simulator/: README.md  pyproject.toml  requirements.txt
fix-protocol-simulator-pro/services/fix-gateway/: Dockerfile  pyproject.toml  pytest.ini
fix-protocol-simulator-pro/services/fix-gateway/src/fix_gateway/: config.py  fix_handler.py  server.py  session_manager.py
fix-protocol-simulator-pro/services/fix-gateway/tests/bdd/: environment.py
fix-protocol-simulator-pro/services/fix-gateway/tests/unit/: test_config.py  test_fix_handler.py  test_logger.py  test_server.py  test_session_manager.py
fix-protocol-simulator-pro/services/market-data-service/: Dockerfile  pyproject.toml  pytest.ini
fix-protocol-simulator-pro/services/market-data-service/src/market_data_service/: config.py  consumer.py  publisher.py
fix-protocol-simulator-pro/services/market-data-service/tests/bdd/: environment.py
fix-protocol-simulator-pro/services/market-data-service/tests/unit/: test_config.py  test_consumer.py  test_market_cache.py  test_publisher.py  test_schemas.py
fix-protocol-simulator-pro/services/matching-engine/: Dockerfile  pyproject.toml
fix-protocol-simulator-pro/services/matching-engine/src/matching_engine/: consumer.py  engine.py  models.py  order_book.py
fix-protocol-simulator-pro/services/matching-engine/tests/unit/: conftest.py  test_consumer.py  test_engine.py  test_models.py  test_order_book.py  test_producer.py  test_schemas.py
fix-protocol-simulator-pro/services/order-service/: Dockerfile  pyproject.toml  pytest.ini
fix-protocol-simulator-pro/services/order-service/src/order_service/: how-to-run.md  producer.py  transformer.py  validator.py
fix-protocol-simulator-pro/services/order-service/tests/bdd/: environment.py
fix-protocol-simulator-pro/services/order-service/tests/unit/: test_config.py  test_consumer.py  test_kafka_client.py  test_logger.py  test_producer.py  test_schemas.py  test_validator.py
fix-protocol-simulator-pro/services/trade-store/: Dockerfile  pyproject.toml  pytest.ini
fix-protocol-simulator-pro/shared/: pyproject.toml  pytest.ini
fix-protocol-simulator-pro/shared/common-utils/: pyproject.toml
fix-protocol-simulator-pro/shared/config/: _loader.py
fix-protocol-simulator-pro/shared/infrastructure/: db.py  kafka_client.py
fix-protocol-simulator-pro/shared/observability/: formatters.py  log_config.py
fix-protocol-simulator-pro/shared/schemas/: book_event.py
fix-protocol-simulator-pro/shared/tests/bdd/: environment.py
fix-protocol-simulator-pro/shared/tests/unit/: test_book_event.py  test_config.py  test_kafka_client.py  test_order_event.py  test_trade_event.py  test_utils.py
fix-protocol-simulator-pro/shared/utils/: time.py
fix-protocol-simulator/scripts/: run_client.py  run_exchange_simulator.py
fix-protocol-simulator/src/fix_simulator/client/: fix_client.py
fix-protocol-simulator/src/fix_simulator/config/: settings.py
fix-protocol-simulator/src/fix_simulator/exchange/: execution_reports.py  matching_engine.py  order.py  order_book.py
fix-protocol-simulator/src/fix_simulator/protocol/: fix_constants.py  fix_message.py  fix_parser.py
fix-protocol-simulator/src/fix_simulator/server/: fix_server.py
fix-protocol-simulator/src/fix_simulator/simulation/: run_simulation.py
fix-protocol-simulator/src/fix_simulator/utils/: logger.py
fix-protocol-simulator/tests/: test_execution_reports.py  test_fix_client.py  test_fix_message.py  test_fix_server.py  test_logger.py  test_matching_engine.py  test_order_book.py  test_parser.py  test_run_simulation.py  test_settings.py
fix-protocol-simulator/tests/bdd/features/: fix_messages.feature  trading.feature
fix-protocol-simulator/tests/bdd/steps/: fix_message_steps.py  trading_steps.py
fixflux/services/compliance-service/: Dockerfile  pyproject.toml
fixflux/services/compliance-service/policies/: compliance_policies.yaml
fixflux/services/fix-gateway/: pyproject.toml
fixflux/services/matching-engine/: Dockerfile  behave.ini  pyproject.toml  pytest.ini
fixflux/services/risk-service/: Dockerfile  pyproject.toml
fixflux/shared/: behave.ini  pyproject.toml
fixflux/shared/common-utils/: pyproject.toml
fixflux/shared/config/: config.yaml  config.yaml.example  settings.py
fixflux/shared/exceptions/: __init__.py  base.py  infrastructure.py  validation.py
fixflux/shared/infrastructure/: kafka_client.py
fixflux/shared/observability/: metrics.py  tracing.py
fixflux/shared/schemas/: __init__.py  execution_report_event.py  order_event.py  trade_event.py
fixflux/shared/tests/bdd/: environment.py
fixflux/shared/tests/unit/: test_exceptions.py  test_execution_report_schema.py  test_json_formatter.py  test_logging.py
pr-compliance-guard/: Dockerfile  README.md  compliance.yaml  pyproject.toml  requirements.txt
pr-compliance-guard/compliance/: __main__.py  cli.py  config.py  engine.py  github_context.py  logger.py  rules.py
pr-compliance-guard/config/: default.yaml  relaxed.yaml
pr-compliance-guard/tests/: test_compliance_bdd.py  test_engine.py  test_engine_from_json.py
pr-compliance-guard/tests/data/: invalid_pr.json  no_jira_pr.json  valid_pr.json
pr-compliance-guard/tests/features/: compliance.feature
price-calculator/: Makefile  README.md  pyproject.toml
price-calculator/calculator/: logging_config.py  price.py
price-calculator/tests/: conftest.py  test_price.py  test_price_bdd.py
price-calculator/tests/features/: price.feature
(+371 files in other folders)
