[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "event-stream-risk-detector"
version = "0.1.0"
description = "Kafka-based streaming risk detection microservice (mid-level engineering lab project)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "Your Name" }
]

dependencies = [
    "kafka-python>=2.0.2",
    "pyyaml>=6.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-bdd>=8.0",
    "pytest-cov>=4.0",
    "pytest-html>=4.0",
]


[project.scripts]
risk-consumer = "event_stream_risk_detector.consumer:run_consumer"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"