[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "event-stream-risk-detector"
version = "0.1.0"
description = "Kafka-based streaming risk detection microservice (mid-level engineering lab project)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "Your Name" }
]

dependencies = [
    "kafka-python>=2.0.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-bdd>=8.0",
    "pytest-cov>=4.0",
    "pytest-html>=4.0",
    "ruff>=0.0.300",
    "black>=23.3",
    "isort>=6.0",
    "mypy>=1.5",
]

[project.scripts]
risk-consumer = "event_stream_risk_detector.consumer:run_consumer"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"

# ===========================
# Linting with ruff
# ===========================
[tool.ruff]
line-length = 88
target-version = ["py310"]
exclude = ["build", "dist", ".venv", "__pycache__"]

# ===========================
# Formatting with black
# ===========================
[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.venv
  | build
  | dist
  | __pycache__
)/
'''

# ===========================
# Import sorting with isort
# ===========================
[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["event_stream_risk_detector"]
default_section = "THIRDPARTY"
multi_line_output = 3
include_trailing_comma = true

# ===========================
# Type checking with mypy
# ===========================
[tool.mypy]
python_version = 3.12
files = "src,tests"
ignore_missing_imports = true
strict = true
show_error_codes = true