# pyproject.toml (event_stream_risk_detector)

[project]
name = "event_stream_risk_detector"
version = "0.1.0"
description = "Detect risk events in streaming data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyYAML>=6.0",
    # Add other runtime dependencies here
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-bdd>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.0.300",
    "black>=23.3",
    "isort>=6.0",
    "mypy>=1.5",
    "types-PyYAML>=6.0",
]

# ==================================================
# Ruff configuration
# ==================================================
[tool.ruff]
line-length = 88
select = ["F", "E", "W", "B", "C", "Q"]  # common categories
exclude = ["__pycache__", ".git", "build", "dist"]
target-version = "py312"

# ==================================================
# Black configuration
# ==================================================
[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | build
  | dist
)/
'''

# ==================================================
# Isort configuration
# ==================================================
[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["event_stream_risk_detector"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
default_section = "THIRDPARTY"

# ==================================================
# Mypy configuration
# ==================================================
[tool.mypy]
python_version = 3.12
files = ["src", "tests"]
ignore_missing_imports = true
strict = true
pretty = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["test_*", "tests.*"]
disallow_untyped_defs = false
