[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pr-compliance-guard"
version = "0.1.0"
dependencies = ["pyyaml"]

[project.scripts]
pr-guard = "compliance.cli:main"

[tool.setuptools]
packages = ["compliance", "config"]

[tool.coverage.run]
omit = [
    "compliance/cli.py",
    "compliance/config.py",
    "compliance/logger.py",
    "compliance/github_context.py",
    "compliance/__main__.py"
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = false
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true