[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "0.1.0"
dependencies = [
    "prometheus-client>=0.20",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-http>=1.24",
]

[tool.setuptools]
package-dir = {"" = ".."}

[tool.setuptools.packages.find]
where = [".."]
include = ["shared", "shared.*"]

[tool.isort]
profile = "black"
known_first_party = ["shared"]
