[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fix-gateway"
version = "0.1.0"
description = "FIX protocol gateway"
requires-python = ">=3.11"

dependencies = [
    "pydantic"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "behave",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true