[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "market-data-service"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "kafka-python",
    "pydantic"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "behave",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]