[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "market-data-service"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "kafka-python",
    "pydantic"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "behave",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
known_first_party = ["market_data_service", "shared"]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true
pretty = true
show_error_codes = true