[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "order-service"
version = "0.1.0"

dependencies = [
 "kafka-python",
 "pydantic"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"
known_first_party = ["order_service", "shared"]