[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-store"
version = "0.1.0"

dependencies = [
 "kafka-python",
 "pydantic",
 "sqlalchemy",
 "psycopg2-binary",
 "fastapi",
 "uvicorn",
 "pyyaml",
 "prometheus-client>=0.20",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
extraPaths = ["../../"]