[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "compliance-service"
version = "0.1.0"
description = "Compliance and surveillance module for FIX Protocol Simulator Pro"
requires-python = ">=3.11"

dependencies = [
    "kafka-python",
    "pydantic",
    "sqlalchemy",
    "psycopg2-binary",
    "fastapi",
    "uvicorn",
    "pyyaml",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "httpx",
    "behave",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
known_first_party = ["compliance_service", "shared"]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true
pretty = true
show_error_codes = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests/unit"]
