[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fix-gateway"
version = "0.1.0"
description = "FIX protocol gateway"
requires-python = ">=3.11"

dependencies = [
    "pydantic",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "behave",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
known_first_party = ["fix_gateway", "shared"]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true
pretty = true
show_error_codes = true