[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "matching-engine"
version = "0.1.0"

dependencies = [
 "kafka-python",
 "pydantic",
 "prometheus-client>=0.20",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "behave",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
known_first_party = ["matching_engine", "shared"]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true
pretty = true
show_error_codes = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests/unit"]
